[project]
name = "mlit-white-paper-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "lindera-py>=0.41.0",
    "mcp[cli,rich]>=1.6.0",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.setuptools.packages.find]
where = ["packages/src"]
include = ["*"]
exclude = ["tests*"]
